--- a/README
+++ b/README
@@ -35,6 +35,32 @@ authorization features over oauth for `sfDoctrineGuardPlugin`.
           .settings:
             enabled_modules:      [default, sfAuth, sfOAuth]
 
+  * Add oauth provider configuration in your `app.yml`
+
+        all:
+          sf_oauth_plugin:
+            enabled: true
+            provider:
+              facebook:
+                enabled:         true
+                protocol:        2
+                consumer_key:    xxxxxxxxxxxxxxx
+                consumer_secret: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                scope:           email
+                authorize_url:   https://graph.facebook.com/oauth/authorize
+                access_url:      https://graph.facebook.com/oauth/access_token
+                profile_url:     https://graph.facebook.com/me
+              google:
+                enabled:         true
+                protocol:        1
+                consumer_key:    anonymous
+                consumer_secret: anonymous
+                scope:           https://www.googleapis.com/auth/userinfo#email
+                request_url:     https://www.google.com/accounts/OAuthGetRequestToken
+                authorize_url:   https://www.google.com/accounts/OAuthAuthorizeToken
+                access_url:      https://www.google.com/accounts/OAuthGetAccessToken
+                email_url:       https://www.googleapis.com/userinfo/email
+
   * Clear you cache
 
         symfony cc
